--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <br>
     <input type="text" ng-model="watchAddition"><button ng-click="AddWatch()">Add {{watchAddition}} to Watch List</button><br>
     <br>
-    <div ng-repeat="i in watching">
-        <div class="itemName">{{i.name}}</div>
-        <div>{{DisplayPrice(i.lowestBuyout)}}</div>
+    <div ng-repeat="(k,v) in watching">
+        <a href="http://www.wowhead.com/item={{k}}&xml" class="itemName">{{v.name}}</a>
+        <div>{{DisplayPrice(v.lowestBuyout)}}</div>
     </div>
+    <a href="http://www.wowhead.com/item=52021&xml">fdsfsd</a>
 
 
 </div>
@@ -30,6 +31,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
 <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
+<script type="text/javascript" src="http://static.wowhead.com/widgets/power.js"></script>
 <script src="main.js"></script>
 
 </body>
