--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <a href="http://www.wowhead.com/item={{k}}" class="itemName" target="_blank">{{v.name}}</a>
         <div>
             <span ng-click="showMulti = showMulti ? false : true">{{DisplayPrice(v.lowestBuyout*(multi || 1))}}</span>
-            <input type="text" size="2" ng-model="multi" ng-show="showMulti">
-            <span ng-show="multi > 1">{{multi ? 'x ' + multi : ''}}</span>
+            <input type="text" size="3" ng-model="multi" ng-show="showMulti">
+            <span ng-hide="multi == 1">{{multi ? 'x ' + multi : ''}}</span>
         </div>
     </div>
 
